Implemented serialization mechanism